--- a/src/Table/TableListing/TableListing.css
+++ b/src/Table/TableListing/TableListing.css
@@ -3,3 +3,43 @@
     font-weight: 700;
     margin-bottom: 20px; 
 }
+
+.loader {
+    position: absolute;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    left: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .float{
+      position: fixed;
+      right: 10%;
+      top: 80%;
+      width: 60px;
+      height: 60px;
+      background:  dodgerblue;
+      color: white;
+      cursor: pointer;
+      border-radius: 50%;
+      text-align: center;
+  }
+
+  .float span {
+      margin: 0;
+  }
